task_2/app/istio/destination.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: app-destination

spec:
  host: app-service
  subsets:
  - name: v1
    labels:
      version: v1

  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN

    connectionPool:
      tcp:
        maxConnections: 3
      http:
        http1MaxPendingRequests: 5

    tls:
      mode: ISTIO_MUTUAL
